--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Trivia</title>
+  <title>Project</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <!-- Bootstrap style sheet-->
 
@@ -10,6 +10,7 @@
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <!-- Added link to the jQuery Library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="app.js"></script>
 </head>
 <body >
   <div class="jumbotron text-center">
@@ -29,8 +30,13 @@
             <input type="text" class="form-control" id="search">
           </div>
           <div class="form-group">
-            <label for="recordReq">Records Requested:</label>
-            <input type="text" class="form-control" id="recordReq">
+            <label for="recordReq">Records Requested</label>
+            <select class="form-control" id="recordReq">
+              <option value=1>1</option>
+              <option value=5 selected>5</option>
+              <option value=10>10</option>
+              <option value=20>20</option>
+            </select>
           </div>
           <div class="form-group">
             <label for="startYear">Start Year:</label>
@@ -40,7 +46,7 @@
             <label for="endYear">End Year:</label>
             <input type="text" class="form-control" id="endYear">
           </div>
-          <button type="submit" class="btn btn-default">Search</button>
+          <button type="submit" class="btn btn-default" id="searchBtn">Search</button>
           <button type="button" class="btn btn-default">Clear</button>
          </form>
        </div>
@@ -52,14 +58,18 @@
     <!-- Results panel -->
    <div class="col-lg-12">
     <div class="card col-lg-12" >
-     <div class="card-body">
       <h4 class="card-title">Search Results</h4>
-        <h2 id="title">Title</h2>
-        <h3 id="aurhor">Author</h3>
-        <h4 id="section">Section</h4>
-        <h4 id="date">Date</h4>
-        <h4 id="link">Link</h4>
-    </div>
+        <div class="cardSection">
+<!--         <div class="card-body">
+          <h2 id="headline">Headline</h2>
+          <h3 id="author">Author</h3>
+          <h4 id="section">Section</h4>
+          <h4 id="date">Date</h4>
+          <h4 id="link">Link</h4>  -->
+        </div>
+
+      </div>
+
     </div>
   </div>
 </div>
